Project text 수정

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Kim Min Su</h1>
-      <p><span class="typed" data-typed-items=" I'm Web Developer, I Love Coding,I enjoy coding">I'm Web
+      <p><span class="typed" data-typed-items="I'm Growing Developer, I'm Potential Developer">I'm Web
           Developer</span><span class="typed-cursor typed-cursor--blink"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -140,6 +140,7 @@
               <p><img src="assets/img/eclipse.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Eclipse</p>
               <p><img src="assets/img/spring.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Spring</p>
               <p><img src="assets/img/sqldeveloper.jpg" alt="">&nbsp;&nbsp;&nbsp; SqlDeveloper</p>
+              <p><img src="assets/img/gitlab.png" alt="">&nbsp;&nbsp;&nbsp; Gitlab</p>
             </div>
           </div>
 
@@ -199,47 +200,47 @@
           <div class="container">
 
             <div class="row portfolio-container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"
-              style="position: relative; height: 1878.45px;">
+              ">
               <!--팀프로젝트-->
-              <div class="col-lg-4 col-md-6 portfolio-item filter-Spring"
+              <div class="col-lg-6 col-md-8 portfolio-item filter-Spring"
                 style="position: absolute; left: 0px; top: 0px;">
                 <div class="portfolio-links">
                   <img src="assets/img/homebab_main.JPG" class="img-fluid" alt="">
                   <hr>
-                  <h4>Semi Project - HomeBab</h4>
+                  <h4>Team Project - HomeBab</h4>
                   <hr>
-                  <p>프로젝트 기간 : 2020.12 ~ 2021.1(6주)</p>
+                  <p><li>프로젝트 기간 : 2022.07 ~ 2022.08</li></p>
                   <hr>
-                  <p>프로젝트 방식 : Jsp</p>
-                  <p>프로젝트 도구 : Eclipse, Spring-tool-suite, Mariadb, Github, Maven</p>
-                  <p>사용 언어 : Html, Java, SQL, JavaScript(jquery), MyBatis, JSTL, bootstrap</p>
+                  <p><li>프로젝트 방식 : Jsp</li></p>
+                  <p><li>언어 : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis, JSTL</li></p>
+                  <p><li>Tools : Eclipse,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li></p>
                   <hr>
                   <p>
                     [프로젝트 설명]<br>
-                
+                    사먹는 음식에 질린 홈밥러들에게 레시피를 제공하는 커뮤니티 사이트
                   </p>
                 </div>
               </div>
-              <div class="col-lg-4 col-md-6 portfolio-item filter-Spring"
+              <div class="col-lg-6 col-md-8 portfolio-item filter-Spring"
                 style="position: absolute; left: 0px; top: 0px;">
                 <div class="portfolio-links">
                   <img src="assets/img/chickenStock.JPG" class="img-fluid" alt="">
                   <hr>
-                  <h4>Final Project - ChickenStock</h4>
+                  <h4>Team Project - ChickenStock</h4>
                   <hr>
-                  <p>프로젝트 기간 : 2020.12 ~ 2021.1(6주)</p>
+                  <p><li>프로젝트 기간 : 2022.08 ~ 2022.09</li></p>
                   <hr>
-                  <p>프로젝트 방식 : Spring MVC</p>
-                  <p>프로젝트 도구 : Eclipse, Spring-tool-suite, Mariadb, Github, Maven</p>
-                  <p>사용 언어 : Html, Java, SQL, JavaScript(jquery), MyBatis, JSTL, bootstrap</p>
+                  <p><li>프로젝트 방식 : Spring-framwork (boot 2.7.3)</li></p>
+                  <p><li>언어 : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis</li></p>
+                  <p><li>Tools : IntelliJ,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li></p>
                   <hr>
                   <p>
                     [프로젝트 설명]<br>
-                    
+                    치킨 프랜차이즈 회사 내의 가맹점과 본사의 유통을 간편하고 쉽게 파악할 수 있는 프로그램
                   </p>
                 </div>
               </div>
-            </div>           
+            </div>
           </div>
 
         </div>
