--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
             <h3>Web Developer</h3>
             <br>
             <p style="font-size: large;">
-              안녕하십니까. 신입 백엔드 개발자 김민수입니다.
+              가능성 있는 개발자, 성장하는 개발자<br>
+              신입 백엔드 개발자 김민수입니다.
             </p>
             <br>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Name :</strong> <span>김 민 수</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday :</strong> <span>1996/07/26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email :</strong> <span>alstn0743@naver.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Github :</strong> <span><a
@@ -199,51 +201,66 @@
           <h2>Project</h2>
           <div class="container">
 
-            <div class="row portfolio-container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100"
-              ">
+            <div class="row portfolio-container aos-init aos-animate" data-aos="fade-up" data-aos-delay="100" ">
               <!--팀프로젝트-->
-              <div class="col-lg-6 col-md-8 portfolio-item filter-Spring"
-                style="position: absolute; left: 0px; top: 0px;">
-                <div class="portfolio-links">
-                  <img src="assets/img/homebab_main.JPG" class="img-fluid" alt="">
-                  <hr>
-                  <h4>Team Project - HomeBab</h4>
-                  <hr>
-                  <p><li>프로젝트 기간 : 2022.07 ~ 2022.08</li></p>
-                  <hr>
-                  <p><li>프로젝트 방식 : Jsp</li></p>
-                  <p><li>언어 : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis, JSTL</li></p>
-                  <p><li>Tools : Eclipse,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li></p>
-                  <hr>
-                  <p>
-                    [프로젝트 설명]<br>
-                    사먹는 음식에 질린 홈밥러들에게 레시피를 제공하는 커뮤니티 사이트
-                  </p>
-                </div>
+              <div class=" col-lg-6 col-md-8 portfolio-item filter-Spring"
+              style="position: absolute; left: 0px; top: 0px;">
+              <div class="portfolio-links">
+                <img src="assets/img/homebab_main.JPG" class="img-fluid" alt="">
+                <hr>
+                <h4>Team Project - HomeBab</h4>
+                <hr>
+                <p>
+                  <li>프로젝트 기간 : 2022.07 ~ 2022.08</li>
+                </p>
+                <hr>
+                <p>
+                  <li>프로젝트 방식 : Jsp</li>
+                </p>
+                <p>
+                  <li>언어 : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis, JSTL</li>
+                </p>
+                <p>
+                  <li>Tools : Eclipse,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li>
+                </p>
+                <hr>
+                <p>
+                  [프로젝트 설명]<br>
+                  사먹는 음식에 질린 홈밥러들에게 레시피를 제공하는 커뮤니티 사이트
+                </p>
               </div>
-              <div class="col-lg-6 col-md-8 portfolio-item filter-Spring"
-                style="position: absolute; left: 0px; top: 0px;">
-                <div class="portfolio-links">
-                  <img src="assets/img/chickenStock.JPG" class="img-fluid" alt="">
-                  <hr>
-                  <h4>Team Project - ChickenStock</h4>
-                  <hr>
-                  <p><li>프로젝트 기간 : 2022.08 ~ 2022.09</li></p>
-                  <hr>
-                  <p><li>프로젝트 방식 : Spring-framwork (boot 2.7.3)</li></p>
-                  <p><li>언어 : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis</li></p>
-                  <p><li>Tools : IntelliJ,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li></p>
-                  <hr>
-                  <p>
-                    [프로젝트 설명]<br>
-                    치킨 프랜차이즈 회사 내의 가맹점과 본사의 유통을 간편하고 쉽게 파악할 수 있는 프로그램
-                  </p>
-                </div>
+            </div>
+            <div class="col-lg-6 col-md-8 portfolio-item filter-Spring"
+              style="position: absolute; left: 0px; top: 0px;">
+              <div class="portfolio-links">
+                <img src="assets/img/chickenStock.JPG" class="img-fluid" alt="">
+                <hr>
+                <h4>Team Project - ChickenStock</h4>
+                <hr>
+                <p>
+                  <li>프로젝트 기간 : 2022.08 ~ 2022.09</li>
+                </p>
+                <hr>
+                <p>
+                  <li>프로젝트 방식 : Spring-framwork (boot 2.7.3)</li>
+                </p>
+                <p>
+                  <li>언어 : Html,&nbsp; Java11,&nbsp; SQL,&nbsp; JavaScript(jquery),&nbsp; MyBatis</li>
+                </p>
+                <p>
+                  <li>Tools : IntelliJ,&nbsp; Visualstudiocode,&nbsp; Gitlab,&nbsp; SqlDeveloper</li>
+                </p>
+                <hr>
+                <p>
+                  [프로젝트 설명]<br>
+                  치킨 프랜차이즈 회사 내의 가맹점과 본사의 유통을 간편하고 쉽게 파악할 수 있는 프로그램
+                </p>
               </div>
             </div>
           </div>
-
         </div>
+
+      </div>
     </section><!-- End portfolio Section -->
 
   </main><!-- End #main -->
