education 영역 css 수정

--- a/index.html
+++ b/index.html
@@ -239,6 +239,45 @@
       </div>
     </section><!-- End Facts Section -->
 
+    <section id="resume" class="resume">
+      <div class="container">
+        <div class="section-title">
+          <h2>Education</h2>
+          </div>
+        <div class="row">
+          <div class="col-lg-6 aos-init" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="resume-title">하이미디어 인재개발원</h3>
+            <div class="resume-item">
+              <h4>Back-end Development</h4>
+              <h5>2022.05.11 - 2022.09.22</h5>
+<!--              <p><em>Experion, New York, NY </em></p>-->
+              <ul>
+                <li>프로그래밍 언어 활용 : 기본문법, 언어특성, 라이브러리 활용하기</li>
+                <li>응용SW 기초기술 활용 : 운영체제, 데이터베이스, 네트워크 기초 활용하기</li>
+                <li>네트워크 프로그래밍 구현 : 개발환경 분석하기, 기능 구현하기</li>
+                <li>SQL활용 : 기본 SQL 작성하기, 고급 SQL 작성하기</li>
+                <li>데이터베이스 구현 : DBMS 설치, 데이터베이스, 데이터베이스 오브젝트 생성하기</li>
+                <li>요구사항 확인 : 현행 시스템 분석하기, 요구사항 확인하기, 분석모델 확인하기</li>
+                <li>인터페이스 구현 : 인터페이스 설계서 확인하기, 인터페이스 기능 구현하기, 인터페이스 구현 검증하기</li>
+                <li>애플리케이션 설계 : 공통 모듈 설계하기, 타 시스템 연동설계하기</li>
+                <li>통합 구현 : 연계 데이터, 연계 메커니즘 구성하기, 내·외부 연계 모듈 구현하기</li>
+                <li>서버프로그램 구현 : 개발환경 구축하기, 공통 모듈, 서버프로그램 구현하기, 배치 프로그램 구현하기</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Front-end Development</h4>
+              <h5>2022.04.06 - 2022.05.10</h5>
+<!--              <p><em>Stepping Stone Advertising, New York, NY</em></p>-->
+              <ul>
+                <li>UI구현 : UI 설계 검토하기, UI 구현 표준 수립하기, UI 제작하기</li>
+                <li>UI / UX 요구분석 : UI / UX 콘셉트 아이디어 도출하기, 패스트 프로토타입 제작하기, 패스트 프로토타이핑 검증하기</li>
+                <li>UI 아키텍쳐 설계 : 정보설계하기, 와이어프레임 작성하기, 태스크 플로우 작성하기</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- ======= Resume Section ======= -->
     <section id="resume" class="resume">
       <div class="container">
