skills, Education text 수정

--- a/index.html
+++ b/index.html
@@ -123,55 +123,63 @@
           <div class="col-lg-4 aos-init" data-aos="fade-up">
             <h4 class="bi bi-chevron-right" data-aos="fade-up">&nbsp; LANGUAGES</h4>
             <div class="progress">
-              <span class="skill">HTML <i class="val">100%</i></span>
+              <span class="skill">Java <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">CSS <i class="val">90%</i></span>
+              <span class="skill">Html <i class="val">70%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                </div>
+              </div>
+            </div>
+            <div class="progress">
+              <span class="skill">Css <i class="val">75%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
             <div class="progress">
               <span class="skill">JavaScript <i class="val">75%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-              </div>
-            </div>
-            <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
-              <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
           </div>
           <div class="col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
             <h4 class="bi bi-chevron-right" data-aos="fade-up">&nbsp; TOOLS</h4>
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">IntelliJ <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i>
+              <span class="skill">Eclipse <i class="val">100%</i>
               </span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">Photoshop <i class="val">55%</i></span>
+              <span class="skill">Spring <i class="val">80%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">JavaScript <i class="val">75%</i></span>
+              <span class="skill">SqlDeveloper <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
           </div>
@@ -179,16 +187,18 @@
           <div class="col-lg-4 aos-init" data-aos="fade-up" data-aos-delay="100">
             <h4 class="bi bi-chevron-right" data-aos="fade-up">&nbsp; DATABASE</h4>
             <div class="progress">
-              <span class="skill">PHP <i class="val">80%</i></span>
+              <span class="skill">Oracle <i class="val">100%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
             <div class="progress">
-              <span class="skill">WordPress/CMS <i class="val">90%</i>
+              <span class="skill">Mybatis <i class="val">90%</i>
               </span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
+                </div>
               </div>
             </div>
           </div>
@@ -196,61 +206,19 @@
       </div>
     </section>
     <!-- ======= Facts Section ======= -->
-    <section id="about" class="about">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Skill</h2>
-        </div>
-
-        <div class="row no-gutters">
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <h3>&nbsp;LANGUAGES</h3><br>
-              <p><img src="assets/img/java.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Java</p>
-              <p><img src="assets/img/html-5.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Html</p>
-              <p><img src="assets/img/css-3.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Css</p>
-              <p><img src="assets/img/js.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; JavaScript</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <h3>&nbsp;Tool</h3><br>
-              <p><img src="assets/img/IntelliJ.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; IntelliJ</p>
-              <p><img src="assets/img/eclipse.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Eclipse</p>
-              <p><img src="assets/img/spring.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Spring</p>
-              <p><img src="assets/img/sqldeveloper.jpg" alt="">&nbsp;&nbsp;&nbsp; SqlDeveloper</p>
-              <p><img src="assets/img/gitlab.png" alt="">&nbsp;&nbsp;&nbsp; Gitlab</p>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-            <div class="count-box">
-              <h3>&nbsp;DATABASE</h3><br>
-              <p><img src="assets/img/oracle.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Oracle</p>
-              <p><img src="assets/img/Mybatis.png" alt="">&nbsp;&nbsp;&nbsp;&nbsp; Mybatis</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </section><!-- End Facts Section -->
 
     <section id="resume" class="resume">
       <div class="container">
         <div class="section-title">
           <h2>Education</h2>
-          </div>
+        </div>
         <div class="row">
           <div class="col-lg-6 aos-init" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">하이미디어 인재개발원</h3>
             <div class="resume-item">
               <h4>Back-end Development</h4>
               <h5>2022.05.11 - 2022.09.22</h5>
-<!--              <p><em>Experion, New York, NY </em></p>-->
+              <!--              <p><em>Experion, New York, NY </em></p>-->
               <ul>
                 <li>프로그래밍 언어 활용 : 기본문법, 언어특성, 라이브러리 활용하기</li>
                 <li>응용SW 기초기술 활용 : 운영체제, 데이터베이스, 네트워크 기초 활용하기</li>
@@ -267,7 +235,7 @@
             <div class="resume-item">
               <h4>Front-end Development</h4>
               <h5>2022.04.06 - 2022.05.10</h5>
-<!--              <p><em>Stepping Stone Advertising, New York, NY</em></p>-->
+              <!--              <p><em>Stepping Stone Advertising, New York, NY</em></p>-->
               <ul>
                 <li>UI구현 : UI 설계 검토하기, UI 구현 표준 수립하기, UI 제작하기</li>
                 <li>UI / UX 요구분석 : UI / UX 콘셉트 아이디어 도출하기, 패스트 프로토타입 제작하기, 패스트 프로토타이핑 검증하기</li>
@@ -279,38 +247,6 @@
       </div>
     </section>
     <!-- ======= Resume Section ======= -->
-    <section id="resume" class="resume">
-      <div class="container">
-
-        <div class="section-title">
-          <h2>Education</h2>
-          <h3>하이미디어 인재개발원</h3>
-          <br>
-          <h5>교육 기간 : 2022.04.06 ~ 2022.09.22</h5>
-          <br>
-          <img src="assets/img/hi.jpg" alt="">
-          <img src="assets/img/hi2.jpg" alt="">
-          <p>1. 프론트엔드 개발 <br><br>
-            1) UI구현 : UI 설계 검토하기, UI 구현 표준 수립하기, UI 제작하기<br>
-            2) UI / UX 요구분석 : UI / UX 콘셉트 아이디어 도출하기, 패스트 프로토타입 제작하기, 패스트 프로토타이핑 검증하기<br>
-            3) UI 아키텍쳐 설계 : 정보설계하기, 와이어프레임 작성하기, 태스크 플로우 작성하기<br>
-            <br>
-            2. 백엔드 개발<br><br>
-            1) 프로그래밍 언어 활용 : 기본문법, 언어특성, 라이브러리 활용하기<br>
-            2) 응용SW 기초기술 활용 : 운영체제, 데이터베이스, 네트워크 기초 활용하기<br>
-            3) 네트워크 프로그래밍 구현 : 개발환경 분석하기, 기능 구현하기<br>
-            4) SQL활용 : 기본 SQL 작성하기, 고급 SQL 작성하기<br>
-            5) 데이터베이스 구현 : DBMS 설치, 데이터베이스, 데이터베이스 오브젝트 생성하기<br>
-            6) 요구사항 확인 : 현행 시스템 분석하기, 요구사항 확인하기, 분석모델 확인하기<br>
-            7) 인터페이스 구현 : 인터페이스 설계서 확인하기, 인터페이스 기능 구현하기, 인터페이스 구현 검증하기<br>
-            8) 애플리케이션 설계 : 공통 모듈 설계하기, 타 시스템 연동설계하기<br>
-            9) 통합 구현 : 연계 데이터, 연계 메커니즘 구성하기, 내·외부 연계 모듈 구현하기<br>
-            10) 서버프로그램 구현 : 개발환경 구축하기, 공통 모듈, 서버프로그램 구현하기, 배치 프로그램 구현하기
-          </p>
-        </div>
-
-      </div>
-    </section><!-- End Resume Section -->
 
     <!-- ======= portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
