--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday :</strong> <span>1996/07/26</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email :</strong> <span>alstn0743@naver.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Github :</strong> <span><a
-                        href="https://github.com/minsukim0743">https://github.com/minsukim0743</a></span></li>
+                        href="https://github.com/minsukim0743" target="_blank">https://github.com/minsukim0743</a></span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone :</strong> <span>010-2302-0544</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Address :</strong> <span>인천광역시 계양구 작전동</span></li>
                 </ul>
